--- a/index.html
+++ b/index.html
@@ -274,6 +274,7 @@ function resetGame() {
         spawnTier: 0,
         spawnRateCost: 10,
         tierUpgradeCost: 100,
+	productionTimeCost: 200,
         grid: Array(16).fill(null)
     };
     
