--- a/index.html
+++ b/index.html
@@ -275,6 +275,7 @@ function resetGame() {
         spawnRateCost: 10,
         tierUpgradeCost: 100,
 	productionTimeCost: 200,
+	productionInterval: 1000,
         grid: Array(16).fill(null)
     };
     
