--- a/index.html
+++ b/index.html
@@ -121,7 +121,37 @@ const tiers = [
 	{ name: "10", image: "img/10.png", production: 3**9 },
 	{ name: "11", image: "img/11.png", production: 3**10 },
 	{ name: "12", image: "img/12.png", production: 3**11 },
-	{ name: "13", image: "img/13.png", production: 3**12 }
+	{ name: "13", image: "img/13.png", production: 3**12 },
+	{ name: "11", image: "img/11.png", production: 3**10 },
+	{ name: "12", image: "img/12.png", production: 3**11 },
+	{ name: "13", image: "img/13.png", production: 3**12 },
+	{ name: "14", image: "img/14.png", production: 3**13 },
+	{ name: "15", image: "img/15.png", production: 3**14 },
+	{ name: "16", image: "img/16.png", production: 3**15 },
+	{ name: "17", image: "img/17.png", production: 3**16 },
+	{ name: "18", image: "img/18.png", production: 3**17 },
+	{ name: "19", image: "img/19.png", production: 3**18 },
+	{ name: "20", image: "img/20.png", production: 3**19 },
+	{ name: "21", image: "img/21.png", production: 3**20 },
+	{ name: "22", image: "img/22.png", production: 3**21 },
+	{ name: "23", image: "img/23.png", production: 3**22 },
+	{ name: "24", image: "img/24.png", production: 3**23 },
+	{ name: "25", image: "img/25.png", production: 3**24 },
+	{ name: "26", image: "img/26.png", production: 3**25 },
+	{ name: "27", image: "img/27.png", production: 3**26 },
+	{ name: "28", image: "img/28.png", production: 3**27 },
+	{ name: "29", image: "img/29.png", production: 3**28 },
+	{ name: "30", image: "img/30.png", production: 3**29 },
+	{ name: "31", image: "img/31.png", production: 3**30 },
+	{ name: "32", image: "img/32.png", production: 3**31 },
+	{ name: "33", image: "img/33.png", production: 3**32 },
+	{ name: "34", image: "img/34.png", production: 3**33 },
+	{ name: "35", image: "img/35.png", production: 3**34 },
+	{ name: "36", image: "img/36.png", production: 3**35 },
+	{ name: "37", image: "img/37.png", production: 3**36 },
+	{ name: "38", image: "img/38.png", production: 3**37 },
+	{ name: "39", image: "img/39.png", production: 3**38 },
+	{ name: "40", image: "img/40.png", production: 3**39 }
 	
 ];
 
