--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@ selectStyle.textContent = `
     }
     .cell.selected .circle {
         transform: scale(1.1);
-        border: 3px solid gold;
+        border: 3px solid blue;
         box-sizing: border-box;
     }
 `;
