--- a/index.html
+++ b/index.html
@@ -148,7 +148,42 @@ const tiers = [
 	{ name: "37", image: "img/37.png", production: 3**44.125 },
 	{ name: "38", image: "img/38.png", production: 3**45.25 },
 	{ name: "39", image: "img/39.png", production: 3**46.5 },
-	{ name: "40", image: "img/40.png", production: 3**47.75 }
+	{ name: "40", image: "img/40.png", production: 3**47.75 },
+	{ name: "41", image: "img/41.png", production: 3**48.75 },
+	{ name: "42", image: "img/42.png", production: 3**50 },
+	{ name: "43", image: "img/43.png", production: 3**51 },
+	{ name: "44", image: "img/44.png", production: 3**52 },
+	{ name: "45", image: "img/45.png", production: 3**53 },
+	{ name: "46", image: "img/46.png", production: 3**54 },
+	{ name: "47", image: "img/47.png", production: 3**55},
+	{ name: "48", image: "img/48.png", production: 3**56 },
+	{ name: "49", image: "img/49.png", production: 3**57 },
+	{ name: "50", image: "img/50.png", production: 3**58 },
+	{ name: "51", image: "img/51.png", production: 3**59 },
+	{ name: "52", image: "img/52.png", production: 3**60 },
+	{ name: "53", image: "img/53.png", production: 3**61 },
+	{ name: "54", image: "img/54.png", production: 3**62 },
+	{ name: "55", image: "img/55.png", production: 3**63 },
+	{ name: "56", image: "img/56.png", production: 3**64 },
+	{ name: "57", image: "img/57.png", production: 3**65 },
+	{ name: "58", image: "img/58.png", production: 3**66 },
+	{ name: "59", image: "img/59.png", production: 3**67 },
+	{ name: "60", image: "img/60.png", production: 3**68 },
+	{ name: "61", image: "img/61.png", production: 3**69 },
+	{ name: "62", image: "img/62.png", production: 3**70 },
+	{ name: "63", image: "img/63.png", production: 3**71 },
+	{ name: "64", image: "img/64.png", production: 3**72 },
+	{ name: "65", image: "img/65.png", production: 3**73 },
+	{ name: "66", image: "img/66.png", production: 3**74 },
+	{ name: "67", image: "img/67.png", production: 3**75 },
+	{ name: "68", image: "img/68.png", production: 3**76 },
+	{ name: "69", image: "img/69.png", production: 3**77 },
+	{ name: "70", image: "img/70.png", production: 3**78 },
+	{ name: "71", image: "img/71.png", production: 3**79 },
+	{ name: "72", image: "img/72.png", production: 3**80 },
+	{ name: "73", image: "img/73.png", production: 3**81 },
+	{ name: "74", image: "img/74.png", production: 3**82 },
+	{ name: "75", image: "img/75.png", production: 3**83 }
 	
 ];
 
