--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@ function saveGame() {
 // Modify resetGame to reset grid size
 function resetGame() {
     gameState = {
-        circles: 0,
+        circles: 1e34,
         spawnRate: 5000,
         spawnTier: 0,
         spawnRateCost: 10,
