--- a/index.html
+++ b/index.html
@@ -183,7 +183,33 @@ const tiers = [
 	{ name: "72", image: "img/72.png", production: 3**93 },
 	{ name: "73", image: "img/73.png", production: 3**94.5 },
 	{ name: "74", image: "img/74.png", production: 3**96 },
-	{ name: "75", image: "img/75.png", production: 3**97.5 }
+	{ name: "75", image: "img/75.png", production: 3**97.5 },
+	{ name: "76", image: "img/76.png", production: 3**99 },
+	{ name: "77", image: "img/77.png", production: 3**100.5 },
+	{ name: "78", image: "img/78.png", production: 3**102 },
+	{ name: "79", image: "img/79.png", production: 3**103.5 },
+	{ name: "80", image: "img/80.png", production: 3**105 },
+	{ name: "81", image: "img/81.png", production: 3**106.5 },
+	{ name: "81", image: "img/82.png", production: 3**108 },
+	{ name: "83", image: "img/83.png", production: 3**109.5 },
+	{ name: "84", image: "img/84.png", production: 3**111 },
+	{ name: "85", image: "img/85.png", production: 3**112.5 },
+	{ name: "86", image: "img/86.png", production: 3**114 },
+	{ name: "87", image: "img/87.png", production: 3**115.5 },
+	{ name: "88", image: "img/88.png", production: 3**117 },
+	{ name: "89", image: "img/89.png", production: 3**118.5 },
+	{ name: "90", image: "img/90.png", production: 3**120 },
+	{ name: "91", image: "img/91.png", production: 3**121.5 },
+	{ name: "92", image: "img/92.png", production: 3**123 },
+	{ name: "93", image: "img/93.png", production: 3**124.5 },
+	{ name: "94", image: "img/94.png", production: 3**126 },
+	{ name: "95", image: "img/95.png", production: 3**127.5 },
+	{ name: "96", image: "img/96.png", production: 3**129 },
+	{ name: "97", image: "img/97.png", production: 3**130.5 },
+	{ name: "98", image: "img/98.png", production: 3**132 },
+	{ name: "99", image: "img/99.png", production: 3**133.5 },
+	{ name: "100", image: "img/100.png", production: 3**135 }
+	
 	
 ];
 
