--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@ function formatNumber(num) {
     const suffixes = [
         '', 'K', 'M', 'B', 'T', 'Qa', 'Qt', 'Sx', 'Sp', 'Oc', 
         'No', 'De', 'UDe', 'DDe', 'TDe', 'QaDe', 'QtDe', 'SxDe', 
-        'SpDe', 'OcDe', 'NoDe', 'Vi'
+        'SpDe', 'OcDe', 'NoDe', 'Vi', 'UVi', 'DVi', 'TVi', 'QaVi', 'QtVi', 'SxVi', 'SpVi', 'OcVi', 'NoVi', 'Tg'
     ];
     
     if (num < 1000) return Math.floor(num).toString();
